2008-09-20 Borut Razem <borut.razem AT siol.net>

	* src/pic16/glue.c:
	  definition of absolute address symbols without initial value,
	  fixed SDCC cresh "do not know how to intialize symbol"

2008-09-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/z80/mul.s (__mulsuchar_rrx_s, __muluschar_rrx_s),
	* device/lib/z80/div.s (__divsuchar_rrx_s, __modsuchar_rrx_s,
	  __divuschar_rrx_s, __moduschar_rrx_s): added mixed signedness versions
	* device/lib/z80/stubs.s: added stubs for above functions
	* src/SDCCopt.c (convilong),
	* src/SDCCsymt.c (initCSupport): fixed bug 1900961
	* src/SDCCsymt.h (__muldiv): enlarged for mixed signedness
	* src/z80/main.c (_hasNativeMulFor): fixed bug, I think
	* support/regression/tests/onebyte.c: enabled all tests for z80

2008-09-15 Borut Razem <borut.razem AT siol.net>

	* device/include/pic16/stdio.h, device/lib/pic16/libc/stdio/streams.c,
	  device/lib/pic16/libc/stdio/printf.c,
	  device/lib/pic16/libc/stdio/strmusart.c,
	  device/lib/pic16/libc/stdio/printf_tiny.c,
	  device/lib/pic16/libc/stdio/sprintf.c,
	  device/lib/pic16/libc/stdio/strmgpsim.c,
	  device/lib/pic16/libc/stdio/putchar.c,
	  device/lib/pic16/libc/stdio/fprintf.c,
	  device/lib/pic16/libc/stdio/strmmssp.c,
	  device/device/lib/pic16/libc/stdio/vprintf.c,
	  device/lib/pic16/libc/stdio/printf_small.c,
	  device/lib/pic16/libc/stdio/vsprintf.c,
	  device/lib/pic16/libc/stdio/strmputchar.c,
	  device/lib/pic16/libc/Makefile.am,
	  device/lib/pic16/libc/Makefile.in:
	  *printf now returns int, puchar.c moved from stdlib to stdio,
	  *printf format parameter type changed from char * to const char *,
	  added GNU link excetion text to library source files,
	  applyed GNU coding style, removed useless svn ids,
	  added BINARY_SPECIFIER macro re-enables the use of the removed 'b'
	  binary specifier: "%b", "%hb" and "%lb"
	* device/lib/pic16/libc/stdio/vfprintf.c:
	  applied patch #2044424: PIC16: vfprintf
	  thanks Mauro Giachero